# document-processor

./: .dockerignore  .gitignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run-local.sh
client/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.js
client/src/components/: FileUpload.js  Footer.js  Header.js  KeyboardShortcuts.js  ProcessingResults.js
client/src/services/: api.js
client/src/styles/: App.css  index.css
docs/: NOVA_Document_Processor_Technical_Analysis.html  TECHNICAL_ANALYSIS.md  pdf_styles.css
server/: Dockerfile  Dockerfile.minimal  Dockerfile.offline  Dockerfile.simple  Dockerfile.ubuntu  pyproject.toml  requirements.txt
server/src/document_processor/: __init__.py  api.py  processor.py
server/src/document_processor/detection/: detector.py
server/src/document_processor/preprocessing/: __init__.py  enhance.py  quality_check.py
server/src/document_processor/rotation/: corrector.py  detector.py
src/document_processor/: api.py  cli.py
src/document_processor/detection/: __init__.py
src/document_processor/preprocessing/: __init__.py  enhance.py
src/document_processor/rotation/: __init__.py
src/document_processor/utils/: __init__.py  io.py
