[tool.poetry]
name = "document-processor"
version = "1.0.0"
description = "A robust document image processing system for orientation correction and boundary detection"
authors = ["Assessment Candidate"]
readme = "README.md"
packages = [{include = "document_processor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.12.0"
numpy = "^1.21.6"
fastapi = "^0.103.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.8"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process-document = "document_processor.cli:main"